--- a/rateofbirth/index.html
+++ b/rateofbirth/index.html
@@ -132,10 +132,10 @@
 				<li>
 					<div>
 						<h2>PROJECT BY</h2>
-						<p>61070035 &nbsp;Chanin Pholpho<br/>
-						61070083 &nbsp;Thummarat Harnprasop<br/>
-						61070110 &nbsp;&nbsp;Bussakorn Wiwattrinon<br/>
-					    61070112&nbsp;&nbsp;&nbsp;Panutda Anan</p>
+						<p> <a href="https://github.com/Chaninpp" target="blank">61070035 &nbsp;Chanin Pholpho</a><br/>
+						 <a href="https://github.com/nw-thmr" target="blank">61070083 &nbsp;Thummarat Harnprasop</a><br/>
+						 <a href="https://github.com/aebussakorn" target="blank">61070110 &nbsp;&nbsp;Bussakorn Wiwattrinon</a><br/>
+					     <a href="https://github.com/pickapp112" target="blank">61070112&nbsp;&nbsp;&nbsp;Panutda Anan</a></p>
 					    <p>DATASET
 					    <a href="http://statbbi.nso.go.th/staticreport/page/sector/th/01.aspx" target="blank">สำนักงานสถิติแห่งชาติ</a><br/>
 						TEMPLATE
