--- a/rateofbirth/index.html
+++ b/rateofbirth/index.html
@@ -23,7 +23,6 @@
 						<h2>RATE OF BIRTH</h2>
 					</a>
 				</li>
-
 				<li>
 					<br/>
 					<br/>
@@ -45,7 +44,10 @@
 						</figure>
 					</div>
 				</li>
-
+				<li>
+					<a href="#0">
+					</a>
+				</li>
 				<li>
 					<a href="#0">
 						<h2>Conclusion</h2>
@@ -119,7 +121,20 @@
 						
 					</div> 
 				</li>
-
+				<li>
+					<div>
+						<h2>การฝากครรภ์</h2>
+						<p>การฝากครรภ์ เป็นสิ่งแรกที่คุณแม่ต้องนึกถึงและถือเป็นเรื่องสำคัญอย่างมาก เพราะการพบแพทย์ในระหว่างการตั้งครรภ์จะช่วยลดความเสี่ยงต่าง ๆ ที่อาจเกิดขึ้นกับคุณแม่และลูกน้อยได้ เพื่อให้ลูกที่คลอดออกมามีสุขภาพที่แข็งแรงสมบูรณ์ เมื่อต้องไปพบแพทย์ หากคุณพ่อไปด้วยก็จะช่วยให้การดูแลกันระหว่างการตั้งครรภ์มีประสิทธิภาพมากยิ่งขึ้น เพราะคุณพ่อจะได้มีส่วนร่วมรับรู้วิธีการดูแลครรภ์และการตัดสินใจในเรื่องอื่น ๆ เช่น การเลือกวิธีคลอด โดยทั่วไปแล้วแพทย์จะแนะนำขั้นตอนต่าง ๆ อย่างวิตามินที่ต้องรับประทาน การงดบุหรี่และเครื่องดื่มแอลกอฮอล์ การตรวจสุขภาพเป็นประจำ ฯลฯ อีกทั้งคำแนะนำของแพทย์ยังช่วยคลายปัญหาให้คุณแม่ได้อย่างเหมาะสม แทนที่จะไปฟังคนอื่นหรือจากที่คนอื่นแนะนำมา ไม่ว่าจะเป็นเรื่องอาการแพ้ท้อง การออกกำลังกาย ตลอดจนการทำอัลตราซาวนด์เพื่อดูความผิดปกติของทารก เพราะฉะนั้นการฝากครรภ์จึงเป็นเรื่องจำเป็นอย่างยิ่ง</p>
+						<h2>ประโยชน์ของการฝากครรภ์</h2>
+						<p>
+					    1. เพื่อส่งเสริมสุขภาพร่างกายและจิตใจของคุณแม่<br/>
+					    2. เพื่อตรวจสอบดูว่าการตั้งครรภ์ดำเนินไปอย่างปกติหรือไม่<br/>
+					    3. ช่วยป้องกันหรือลดอาการแทรกซ้อนที่เกิดขึ้นในระหว่างการตั้งครรภ์<br/>
+					    4. ช่วยป้องกันอันตรายที่เกิดขึ้นกับทารกในครรภ์<br/>
+					    5. ช่วยดูแลทารกในครรภ์<br/>
+						</p>
+					</div>
+				</li>
 				<li>
 					<div>
 						<h2>สรุป</h2>
